--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-GROQ_API_KEY = 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
+GROQ_API_KEY = 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
+
+YOUTUBE_API_KEY = AIzaSyApT_Ei_WBhWWrcqWzjokoGJ0lWMAs26Ew
